add_subdirectory(bspCharInputOutput EXCLUDE_FROM_ALL)
add_subdirectory(bspDynamicClient EXCLUDE_FROM_ALL)
add_subdirectory(bspInputManager EXCLUDE_FROM_ALL)
add_subdirectory(bspInterrupts EXCLUDE_FROM_ALL)
add_subdirectory(bspOutputManager EXCLUDE_FROM_ALL)
add_subdirectory(bspOutputPwm EXCLUDE_FROM_ALL)

if (BUILD_UNIT_TESTS)
    add_subdirectory(bspInputManager/test/gtest)
    add_subdirectory(bspCharInputOutput/test/gtest)
    add_subdirectory(bspDynamicClient/test/gtest)
    add_subdirectory(bspInterrupts/test/gtest)
    add_subdirectory(bspOutputManager/test/gtest)
    add_subdirectory(bspOutputPwm/test/gtest)
endif ()
