add_subdirectory(async EXCLUDE_FROM_ALL)
add_subdirectory(asyncConsole EXCLUDE_FROM_ALL)
add_subdirectory(asyncFreeRtos EXCLUDE_FROM_ALL)
add_subdirectory(asyncImpl EXCLUDE_FROM_ALL)
add_subdirectory(bsp EXCLUDE_FROM_ALL)
add_subdirectory(common EXCLUDE_FROM_ALL)
add_subdirectory(cpp2can EXCLUDE_FROM_ALL)
add_subdirectory(docan EXCLUDE_FROM_ALL)
add_subdirectory(io EXCLUDE_FROM_ALL)
add_subdirectory(lifecycle EXCLUDE_FROM_ALL)
add_subdirectory(logger EXCLUDE_FROM_ALL)
add_subdirectory(loggerIntegration EXCLUDE_FROM_ALL)
add_subdirectory(platform EXCLUDE_FROM_ALL)
add_subdirectory(runtime EXCLUDE_FROM_ALL)
add_subdirectory(stdioConsoleInput EXCLUDE_FROM_ALL)
add_subdirectory(timer EXCLUDE_FROM_ALL)
add_subdirectory(transport EXCLUDE_FROM_ALL)
add_subdirectory(transportRouterSimple EXCLUDE_FROM_ALL)
add_subdirectory(uds EXCLUDE_FROM_ALL)
add_subdirectory(util EXCLUDE_FROM_ALL)

if (BUILD_UNIT_TESTS)
    add_subdirectory(async/test/gtest)
    add_subdirectory(asyncConsole/test/gtest)
    add_subdirectory(asyncFreeRtos/test/gtest)
    add_subdirectory(asyncImpl/examples)
    add_subdirectory(asyncImpl/test/gtest)
    add_subdirectory(bsp/test/gtest)
    add_subdirectory(cpp2can/test/gtest)
    add_subdirectory(docan/test/gtest)
    add_subdirectory(io/examples)
    add_subdirectory(io/test)
    add_subdirectory(lifecycle/examples)
    add_subdirectory(lifecycle/test/gtest)
    add_subdirectory(logger/test)
    add_subdirectory(platform/test/gtest)
    add_subdirectory(runtime/test/gtest)
    add_subdirectory(timer/test/gtest)
    add_subdirectory(transport/test/gtest)
    add_subdirectory(uds/test/gtest)
    add_subdirectory(util/test/gtest)
endif ()
