add_subdirectory(async)
add_subdirectory(asyncConsole)
add_subdirectory(asyncFreeRtos)
add_subdirectory(asyncImpl)
add_subdirectory(bsp)
add_subdirectory(common)
add_subdirectory(cpp2can)
add_subdirectory(docan)
add_subdirectory(estd)
add_subdirectory(io)
add_subdirectory(lifecycle)
add_subdirectory(logger)
add_subdirectory(loggerIntegration)
add_subdirectory(platform)
add_subdirectory(runtime)
add_subdirectory(stdioConsoleInput)
add_subdirectory(timer)
add_subdirectory(transport)
add_subdirectory(transportRouterSimple)
add_subdirectory(uds)
add_subdirectory(util)
